--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -6,6 +6,13 @@ h1, h2 {
     color:cornflowerblue;
 }
 
+h1 {
+    font-size:2em;
+}
+
+h2 {
+    font-size:1em;
+}
 .evenrow {
     color:lavender;
 }
