--- a/unit7styles.css
+++ b/unit7styles.css
@@ -1,3 +1,45 @@
 h1 {
     color:#ff0000;
 }
+
+a:link {
+    color:#00ff00;
+}
+
+a:visited {
+    color:#0000ff;
+}
+
+a:hover {
+    color:#999999;
+}
+
+/* hex color requires the pound sign */ 
+/* pseudo selectors need a colon between selector and its state */
+
+.oneoff:hover {
+    color:#0283bf;
+    background-color:#5d02bf;
+}
+/* you can use any selector with pseudo selectors */
+
+body {
+    background-image:url(images/LI-In-Bug.png);
+    background-color:#ebebda;
+    background-size:200px;
+    /* size the background image */
+}
+
+p {
+    background-color:#ffffff;
+    /* to calculate width: width of box + padding x2 + border-width x2 + margin x2 */
+    /* for our box: 300 px + 40px + 10px + 100px = 450px */
+    width: 300px;
+    padding: 20px;
+    margin: 50px;
+    border: 5px solid #000000;
+    /* this is a combo property value, it's documented in the css specification */
+}
+
+/* file path for background is from the css file */
+/* don't forget the url and paranthesis for background image */
