--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -18,6 +18,7 @@ nav {
     background-color:#c6a895;
     padding:10px;
     margin-bottom:30px;
+    color:#160000;
 }
 
 @media only screen and (max-width:1024px) {
