--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -1,12 +1,12 @@
 body {
     background-color:#faf0e6;
-    color:#895737;
+    color:#4d311f;
     font-family:Montserrat, Helvetica, Arial;
     padding:20px;
 }
 
 a:link {
-    color:#5f3024;
+    color:#552012;
 }
 
 h1, h2, h3 {
