--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -3,6 +3,7 @@ body {
     color:#4d311f;
     font-family:Montserrat, Helvetica, Arial;
     padding:20px;
+    font-size:1em;
 }
 
 a:link {
@@ -19,6 +20,7 @@ nav {
     padding:10px;
     margin-bottom:30px;
     color:#160000;
+    font-size:1em;
 }
 
 @media only screen and (max-width:1024px) {
