--- a/project/styles.css
+++ b/project/styles.css
@@ -233,6 +233,8 @@ h1 {
 .sectionimg {
     padding-right:75px;
     margin-left:25px;
+    width:100%;
+    max-width:700px;
 }
 
 .sectiontitle {
@@ -270,6 +272,8 @@ h1 {
 
 
 .sectionimg2 {
+    width:100%;
+    max-width:500px;
     padding-left:50px;
     margin-right:-100px;
 }
