--- a/project/styles.css
+++ b/project/styles.css
@@ -222,12 +222,23 @@ h1 {
     color:#4c46cb;
 }
 
+#sectionbg {
+    background-color:#7871ff;
+}
+
 #sectioncontainer {
-    background-color: #fff;
     width: 1200px;
     margin: auto;
     display:flex;
     padding:100px 0px;
+}
+
+#sectioncontainer2 {
+    width: 1200px;
+    margin: auto;
+    display:flex;
+    padding:100px 0px;
+    color:#fff;
 }
 
 .sectionimg {
@@ -237,7 +248,7 @@ h1 {
     max-width:500px;
 }
 
-.sectiontitle {
+.sectiontitle{
     position:absolute;
     border:1px solid #000;
     margin-left:-300px;
@@ -248,6 +259,19 @@ h1 {
     font-size:2.75em;
     width:450px;
 }
+
+.titlesec{
+    position:absolute;
+    border:1px solid #fff;
+    margin-left:-300px;
+    border-radius:50px;
+    padding:10px 150px;
+    text-transform:uppercase;
+    font-family:Montserrat;
+    font-size:2.75em;
+    width:450px;
+}
+
 
 .sectionquote {
     margin-top:145px;
