--- a/project/styles.css
+++ b/project/styles.css
@@ -106,6 +106,10 @@ body {
 footer {
     text-align:center;
     font-family:Montserrat;
+    background-color:#4c46cb;
+    color:#fff;
+    font-weight:bold;
+    padding:50px;
 }
 
 .clear {
@@ -248,9 +252,12 @@ h1 {
     max-width:500px;
 }
 
+
 .sectiontitle{
     position:absolute;
+    background-color:#fff;
     border:1px solid #000;
+    color:#000;
     margin-left:-300px;
     border-radius:50px;
     padding:10px 150px;
@@ -260,12 +267,28 @@ h1 {
     width:450px;
 }
 
-.titlesec{
+
+.sectiontitle2 {
+    position:absolute;
+    border:1px solid #322aca;
+    background-color:#7871ff;
+    color:#fff;
+    margin-left:100px;
+    border-radius:50px;
+    padding:10px 150px;
+    text-transform:uppercase;
+    font-family:Montserrat;
+    font-size:2.75em;
+    width:450px;
+    text-align:right;
+}
+
+.sectiontitle3 {
     position:absolute;
     background-color:#fff;
     border:1px solid #000;
     color:#000;
-    margin-left:-300px;
+    margin-left:-200px;
     border-radius:50px;
     padding:10px 150px;
     text-transform:uppercase;
@@ -304,18 +327,6 @@ h1 {
     margin-right:-100px;
 }
 
-.sectiontitle2 {
-    position:absolute;
-    border:1px solid #000;
-    margin-left:100px;
-    border-radius:50px;
-    padding:10px 150px;
-    text-transform:uppercase;
-    font-family:Montserrat;
-    font-size:2.75em;
-    width:450px;
-    text-align:right;
-}
 
 
 .sectionlearn2 {
@@ -341,17 +352,7 @@ h1 {
     text-align:right;
 }
 
-.sectiontitle3 {
-    position:absolute;
-    border:1px solid #000;
-    margin-left:-200px;
-    border-radius:50px;
-    padding:10px 150px;
-    text-transform:uppercase;
-    font-family:Montserrat;
-    font-size:2.75em;
-    width:450px;
-}
+
 
 .pagequote {text-align:center;font-size:2em;color:#4c46cb;}
 
