--- a/project/styles.css
+++ b/project/styles.css
@@ -1,11 +1,11 @@
 body {
-    font-family:Raleway;
+    font-family:'Raleway', sans-serif;
     font-size:1em;
 }
 
 footer {
     text-align:center;
-    font-family:Montserrat;
+    font-family:'Montserrat', sans-serif;
     background-color:#4c46cb;
     color:#fff;
     font-weight:bold;
@@ -28,7 +28,7 @@ nav {
 }
 
 nav a {
-    font-family:Montserrat;
+    font-family:'Montserrat', sans-serif;
     font-weight:bold;
     font-size:1.10em;
     text-transform:uppercase;
@@ -113,7 +113,7 @@ h1 {
 }
 
 .icontext {
-    font-family:Montserrat;
+    font-family:'Montserrat', sans-serif;
     text-transform: uppercase;
     text-align:center;
     font-weight:bold;
@@ -157,7 +157,7 @@ h1 {
     border-radius:50px;
     padding:10px 150px;
     text-transform:uppercase;
-    font-family:Montserrat;
+    font-family:'Montserrat', sans-serif;
     font-size:2.75em;
     width:450px;
 }
@@ -172,7 +172,7 @@ h1 {
     border-radius:50px;
     padding:10px 150px;
     text-transform:uppercase;
-    font-family:Montserrat;
+    font-family:'Montserrat', sans-serif;
     font-size:2.75em;
     width:450px;
     text-align:right;
@@ -187,7 +187,7 @@ h1 {
     border-radius:50px;
     padding:10px 150px;
     text-transform:uppercase;
-    font-family:Montserrat;
+    font-family:'Montserrat', sans-serif;
     font-size:2.75em;
     width:450px;
 }
@@ -282,7 +282,7 @@ h1 {
     max-width: 1200px;
     margin: auto;
     padding-top:25px;
-    font-family:Montserrat;
+    font-family:'Montserrat', sans-serif;
     text-transform:uppercase;
     font-size:2em;
     color:#322aca;
@@ -338,7 +338,7 @@ h1 {
 .savemethodtitle {
     font-size:1.25em;
     font-weight:bold;
-    font-family:Montserrat;
+    font-family:'Montserrat', sans-serif;
     text-transform:uppercase;
     color:#4c46cb;
 }
@@ -346,7 +346,7 @@ h1 {
 .savemethodtitle2 {
     font-size:2em;
     font-weight:bold;
-    font-family:Montserrat;
+    font-family:'Montserrat', sans-serif;
     text-transform:uppercase;
     color:#4c46cb;
 }
