--- a/project/styles.css
+++ b/project/styles.css
@@ -204,6 +204,7 @@ h1 {
 .sectlist, .sectlist2{
     list-style-type: none;
     font-size:1.25em;
+    font-weight:bold;
 }
 
 .sectlist {color:#fff;}
