--- a/project/styles.css
+++ b/project/styles.css
@@ -146,7 +146,7 @@ h1 {
 
 .sectone {
     display:flex;
-    background-color:#7871ff;
+    background-color:#4c46cb;
     justify-content: center;
     padding:100px 0px;
 }
@@ -204,7 +204,6 @@ h1 {
 .sectlist, .sectlist2{
     list-style-type: none;
     font-size:1.25em;
-    font-weight:bold;
 }
 
 .sectlist {color:#fff;}
