--- a/project/styles.css
+++ b/project/styles.css
@@ -209,7 +209,7 @@ h1 {
 .sectlist {color:#fff;}
 
 .sectbutton {
-    background-color:#322aca;
+    background-color:#1e1988;
     color:#fff;
     text-transform:uppercase;
     padding:10px 20px;
